# RustShell

./: Cargo.toml
src/: functions.rs  main.rs
src/functions/: current_dir.rs  delete.rs  elevate.rs  encrypt.rs  file_scan.rs
