[package]
name = "RustShell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1.12"
windows = "0.44.0"

[dependencies]
ansi_term = "^0.12.1"
anyhow = "1.0"
aes-gcm = "0.10.0"
base64 = "0.20.0"
bincode = "1.3.3"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
colored = "2.0.0"
crossterm = "0.26.1"
gethostname = "0.4.1"
hex = "0.4.3"
hkdf = "0.11.0"
ifcfg = "0.1.2"
jwalk = "0.8.1"
libc = "0.2.108"
os_info = "3.5.1"
rand = "0.8.4"
rayon = "1.5.1"
reqwest = "0.11.13"
regex = "1.5.4"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusty_password = "0.1.2"
rustyline = "11.0.0"
serde = "1.0.163"
serde_json = "1.0.93"
sha2 = "0.9.8"
sysinfo = "0.29.0"
threadpool = "1.8.1"
winit = "0.27.5"
whoami = "1.2.3"
winapi = { version = "0.3.9", features = ["winuser","wincontypes","wincon","securitybaseapi"] }
winreg = "0.50.0"
windows = "0.44.0"
